feat: borrower module
