# models/request.go
@@ -1,0 +1,7 @@
+package models
+
+type BorrowerRequest struct {
+	FirstName   string `json:"first_name"`
+	LastName    string `json:"last_name"`
+	PhoneNumber string `json:"phone_number"`
+}
